# AverageFaces

./: CMakeLists.txt
crawler/: crawl.sh  getImg.sh
include/: AverageFaces.h  flandmark_detector.h  msvc-compat.h
src/: AverageFaces.cpp  CMakeLists.txt  FindFace.cpp  flandmark_detector.cpp
